--- a/index.css
+++ b/index.css
@@ -195,5 +195,22 @@ text-align: center;
   #endline p{
     color: white;
   }
+  ul {
+    display: inline;
+    margin: 0;
+    padding: 0;
+  }
+  ul li {display: inline-block;}
+  ul li:hover ul {display: block;}
+  ul li ul {
+    position: absolute;
+    width: 200px;
+    display: none;
+  }
+  ul li ul li { 
+    background: white; 
+    display: block; 
+  }
+  ul li ul li a {display:block} 
   
   
