--- a/styles/dropdown.css
+++ b/styles/dropdown.css
@@ -4,157 +4,31 @@ body{
     padding: 0;
     box-sizing: border-box;
 }
-nav {
-    height: 4rem;
+nav{
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width:99.5%;
-    /* margin-left: 2px; */
+    justify-content: space-between;
+}
+#options{
     margin: auto;
-    /* margin-bottom: 1rem; */
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
-    position: relative;
-}
-
-#options {
-   margin: auto;
-   margin-top: 1.2%;
-   width: 100%;
-}
-
-ul {
+    width:90%;
     display: flex;
-    justify-content: space-evenly;
-    list-style-type: none;
-    margin: auto;
-    margin-right: 80px;
-    /* border: 2px solid; */
+    justify-content: space-between;
 }
-
-li > a{
-    text-decoration: none;
-    color: #282c3f;
-    margin-left: 1rem;
-    font-size: 80%;
-    font-weight: bold;
-    letter-spacing: .01rem;
-}
-
-
-#birthday {
-    /* border: 1px solid red;s */
-    max-height: 100%;
-    height: 2.6rem;
-    padding-right: 1rem;
-    padding-left: -1rem;
-    margin-left: 1rem;
-    /* margin-top: 1srem; */
-}
-#birthday:hover {
-    border-bottom: 4px solid #ee5f73;
-    border-radius: .1rem;
-}
-
-#sympathy {
-    max-height: 100%;
-    height: 2.6rem;
-    padding-right: 1rem;
-    padding-left: -1rem;
-}
-#sympathy:hover {
-    border-bottom: 4px solid #0db7af;
-    border-radius: .1rem;
-}
-#occasion {
-    /* border: 1px solid red;s */
-    max-height: 100%;
-    height: 2.6rem;
-    padding-right: .2rem;
-    padding-left: -1rem;
-    margin-left: -.1rem;
-    /* margin-top: 1srem; */
-}
-#occasion:hover {
-    border-bottom: 4px solid #ff3f6c;
-    border-radius: .1rem;
-}
-
-#flowers {
-    height: 2.6rem;
-    max-width: fit-content;
-    margin-left: 0.3rem;
-}
-
-#flowers:hover {
-    border-bottom: 4px solid #0db7af;
-    border-radius: .1rem;
-}
-
-#plants {
-    max-height: 100%;
-    height: 2.6rem;
-    padding-left: -1rem;
-    margin-left: -.1rem;
-}
-#plants:hover {
-    border-bottom: 4px solid #ff3f6c;
-    border-radius: .1rem;
-}
-
-
-#food {
-    max-height: 100%;
-    height: 2.6rem;
-    padding-right: 1rem;
-    padding-left: -1rem;
-}
-#food:hover {
-    border-bottom: 4px solid #0db7af;
-    border-radius: .1rem;
-}
-#gift {
-    max-height: 100%;
-    height: 2.6rem;
-    padding-right: 1rem;
-    padding-left: -1rem;
-}
-#gift:hover {
-    border-bottom: 4px solid #fb56c1;
-    border-radius: .1rem;
-}
-#delivery {
-    max-height: 100%;
-    height: 2.6rem;
-    padding-right: 1rem;
-    padding-left: -1rem;
-}
-#delivery:hover {
-    border-bottom: 4px solid#0db7af;
-    border-radius: .1rem;
-}
-#sale {
-    max-height: 100%;
-    height: 2.6rem;
-    padding-right: 1rem;
-    padding-left: -1rem;
-}
-#sale:hover {
-    border-bottom: 4px solid #fb56c1;
-    border-radius: .1rem;
-}
-#community {
-    max-height: 100%;
-    height: 2.6rem;
-    padding-right: 1rem;
-    padding-left: -1rem;
-}
-#community:hover {
-    border-bottom: 4px solid#0db7af;
-    border-radius: .1rem;
-}
-i {
-    cursor: pointer;
+#options>ul{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    color: rgb(47, 47, 47);
+    font-size: min(1.2vw, 0.95rem);
+    box-sizing: border-box;
+    font-family: sans-serif;
+    padding: clamp(0.2em, 0.5vw, 0.5em) clamp(0.2em, 0.5vw, 0.64em);
+    align-content: center;
+    border-radius: 8px;
+    text-decoration-color: rgb(47, 47, 47);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-weight: semibold;
 }
 /* icons */
 #icons {
