--- a/product.css
+++ b/product.css
@@ -91,7 +91,7 @@ select{
     color: white;
 }
 
-#filter{
+#filtering{
     /* display: inline-block; */
     /* margin-right: 75rem; */
     position: relative;
